Inmob-Salesforce/force-app/main/default/objects/Propiedad__c/Propiedad__c.object-meta.xml
<CustomObject>
    <label>Propiedad</label>
    <nameField>
        <label>Nombre de Propiedad</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Propiedades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>