Inmob-Salesforce/force-app/main/default/objects/Propiedad__c/fields/CI_Avaluo__c.field-meta.xml
<CustomField>
    <fullName>CI_Avaluo__c</fullName>
    <label>Avalúo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>