Inmob-Salesforce/force-app/main/default/objects/Propiedad__c/fields/CI_Hipoteca__c.field-meta.xml
<CustomField>
    <fullName>CI_Hipoteca__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hipoteca</label>
    <type>Checkbox</type>
</CustomField>