Inmob-Salesforce/force-app/main/default/objects/Propiedad__c/fields/CI_Mts__c.field-meta.xml
<CustomField>
    <fullName>CI_Mts__c</fullName>
    <label>Mts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>