Inmob-Salesforce/force-app/main/default/objects/Propiedad__c/fields/CI_Tipo_Propiedad__c.field-meta.xml
<CustomField>
    <fullName>CI_Tipo_Propiedad__c</fullName>
    <label>Tipo de Propiedad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>ACM</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>DEPARTAMENTO</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>TERRENO</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>GARAJE</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>LOCALES COMERCIALES</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>OFICINA</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>TOWN HOUSE</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>VIVIENDA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>