Inmob-Salesforce/force-app/main/default/objects/Propiedad__c/fields/CI_Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>CI_Ubicacion__c</fullName>
    <label>Ubicación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>